[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/player/weapons/mega_buster.gd" type="Script" id=1]
[ext_resource path="res://characters/player/weapons/MegaBusterProjectile.png" type="Texture" id=2]
[ext_resource path="res://stages/assets/precise_visibility_notifier_2D.gd" type="Script" id=3]
[ext_resource path="res://characters/player/weapons/MegaBuster.wav" type="AudioStream" id=4]
[ext_resource path="res://characters/player/weapons/Reflect.wav" type="AudioStream" id=5]
[ext_resource path="res://characters/player/weapons/light.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 3, 4 )

[node name="Projectile" type="KinematicBody2D" groups=[
"PlayerWeapons",
]]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="PreciseVisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -4, -3, 8, 6 )
script = ExtResource( 3 )

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="ReflectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 6 )
texture_scale = 0.5
color = Color( 0.792157, 0.956863, 1, 1 )
energy = 0.5

[connection signal="camera_exited" from="PreciseVisibilityNotifier2D" to="." method="on_camera_exited"]
